# tickets-analyzer-api

./: .gitignore  .pre-commit-config.yaml  DEV_README.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
src/: main.py
src/application/: parse_ticket_file.py
src/domain/: ticket.py
src/domain/parsers/: file.py  ticket.py
src/domain/schemas/: ticket.py  ticket_item.py
src/domain/services/: logger.py
src/infrastructure/parsers/: mercadona_ticket_parser.py  pypdf_file.py
src/infrastructure/routers/: health.py  mercadona.py
tests/integration/: conftest.py
tests/integration/routers/: test_health.py  test_mercadona.py
tests/unit/application/: test_parse_ticket_file.py
tests/unit/infrastructure/parsers/: test_mercadona_ticket_parser.py  test_pypdf_file.py
